@startuml connect4.connect4.console.start

abstract class MenuOption as  "onnect4.views.console.\nshared.MenuOption"
class Menu as "connect4.utils\n.models.menu.Menu"
class Console as "connect4.utils\n.Console"
enum Message as "console.shared.Message"
class StartController as "controllers.core\n.StartController"

package start as "connect4.views.console.start"{
    
}

class start.StartView{
    +interact(StartController)
}

class TurnView as  "views.console.turn.TurnView" {
}

class start.StartMenu {
}

class start.NewGameCommand {
    +interact()
}

class start.OpenGameCommand {
    +interact()
}

class start.GameSelectionMenu {
}

class start.GameSelectionCommand {
    +interact()
}

Menu <|-- StartMenu
StartMenu --> NewGameCommand
StartMenu --> OpenGameCommand
StartMenu --> StartController
NewGameCommand ..> TurnView
StartMenu ..> MenuOption
MenuOption <|-- NewGameCommand
MenuOption <|-- OpenGameCommand
OpenGameCommand --> StartController
NewGameCommand --> StartController
MenuOption <|-- GameSelectionCommand
OpenGameCommand ..> GameSelectionMenu
GameSelectionMenu --> "0..n" GameSelectionCommand
GameSelectionMenu --> StartController
Menu <|-- GameSelectionMenu
GameSelectionCommand --> StartController
GameSelectionCommand ..> Console
GameSelectionCommand ..> Message
StartView ..> StartController
StartView ..> StartMenu

@enduml